# rust_wikipedia_web_scrapping

./: Cargo.toml  README.md
src/: main.rs
