[package]
name = "wikipedia_web_scrapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.8", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
scraper = "0.12.0"
clap = { version = "3.0.4", features = ["derive"] }
